app/src/test/resources/programs/invalid/structs/changingImmutableMemberInConstructor.exe
uct Singleton = {
    let val = 14;

    ctor() {
        here.val = 15;
    }
}

foo main() -> Int = {
    let resource = new Singleton();
    0
}